# qec-project

./: .gitignore  README.md  pyproject.toml
NN-based/graphqec-paper/: LICENSE  README.md  pyproject.toml  repo_surface_code_investigation.md
NN-based/graphqec-paper/configs/benchmark/bposd_acc/: BB72.json
NN-based/graphqec-paper/configs/benchmark/concat_matching_acc/: TCd11.json  TCd3.json  TCd5.json  TCd7.json  TCd9.json
NN-based/graphqec-paper/configs/benchmark/graphqec_acc/: BB72.json  TCd3.json
NN-based/graphqec-paper/configs/benchmark/graphqec_time/: BB144.json  BB72.json
NN-based/graphqec-paper/configs/benchmark/repro/: BB144_time_release.json  BB72_acc_release.json  BB72_time_release.json  TCd3_acc_release.json
NN-based/graphqec-paper/graphqec/benchmark/: evaluate.py  evaluate_sycamore.py  utils.py
NN-based/graphqec-paper/graphqec/decoder/: __init__.py  _colorcode_concatmatching.py  _concatmatching.py  _slidingwindow_bposd.py  bposd.py  concat_matching.py  pymatching.py  slidingwindow_bposd.py
NN-based/graphqec-paper/graphqec/decoder/nn/: __init__.py  _gated_deltanet.py  _scatter.py  blocks.py  dataloader.py  models.py  train_utils.py  utils.py
NN-based/graphqec-paper/graphqec/qecc/: __init__.py  code.py  noise.py  normalize.py  utils.py
NN-based/graphqec-paper/graphqec/qecc/color_code/: sydney_color_code.py
NN-based/graphqec-paper/graphqec/qecc/ldpc_code/: __init__.py  bbcode.py  bbnomial.py  shyps.py  (+3 more)
NN-based/graphqec-paper/scripts/: check_reproducibility.py  install_causal_conv1d.py  process_bbcode_graphqec_time.py  reproduce_bb72_time.py  run_bbcode_graphqec_time.py  run_bbcode_graphqec_time_background.sh  run_benchmark.py
(+316 files in other folders)
