[project]
name = "qec-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "panqec>=0.1.7",
    "pymatching>=2.3.1",
    "scipy>=1.17.1",
    "stim>=1.15.0",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]
