[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphqec"
version = "0.9.5.dev"
description = "Quantum Error Correction with graph neural network"
authors = [
    { name = "Gengyuan Hu", email = "china.fadelis@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # machine learning
    "torch==2.5.1",
    "flash-linear-attention==0.3.0",
    # "causal-conv1d==1.5.0",
    "accelerate>=1.0.0",
    "einops",
    # visualization
    "wandb",
    "tensorboard",
    "matplotlib",
    # QEC tools
    "stim>=1.13.0",
    "ldpc>=2.0.0",
    "pymatching",
    # slurm tools
    "submitit",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/Fadelis98/graphqec-paper"  # Replace with your repository URL

[tool.setuptools.packages.find]
include = ["graphqec"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
